2009-10-01  Piotr Fusik  <fox@scene.pl>
* flash/ASAP.ppas, flash/ASAPPlayer.as, flash/ASAP_ModuleInfo.as,
  flash/PokeyState.as, flash/Makefile, anylang.h, asap.c, apokeysnd.c,
  asap_internal.h, win32/Makefile: work on Flash version continued


2009-09-29  Piotr Fusik  <fox@scene.pl>
* flash/ASAP.ppas, flash/ASAPPlayer.as, flash/Makefile, anylang.h, apokeysnd.c,
  asap.c, win32/Makefile: Flash version!


2009-09-28  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: binary distributions renamed from *-win32.* to *-windows.*


2009-09-26  Piotr Fusik  <fox@scene.pl>
* javascript/asap.ppjs, javascript/asap2wav.ppjs, javascript/Makefile,
  acpu.c, apokeysnd.c, asap.c, asap_internal.h, anylang.h, win32/Makefile:
  ASAP can converted to pure JavaScript!

* asap.c, asap.h, asap2wav.c: ASAP_SONGS_MAX

* asap.c, asap_internal.h, anylang.h, acpu.c, apokeysnd.c, csharp/ASAP.ppcs,
  java/ASAP.ppjava, Makefile, csharp/Makefile, gsplayer/Makefile, java/Makefile,
  win32/Makefile: C/Java/C# macros moved to anylang.h and improved


2009-09-25  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: removed absolute paths to asciidoc (use Cygwin's)
  and XHTML DTD (use /etc/xml/catalog)

* Makefile, win32/Makefile: "-a localtime" for old asciidoc (e.g. Cygwin's)


2009-09-24  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap_internal.h, apokeysnd.c, csharp/ASAP.ppcs,
  java/ASAP.ppjava, java/ASAP_ModuleInfo.java, chksap.pl: added COVOX emulation
  (use "COVOX D600" in SAP header)


2009-09-23  Piotr Fusik  <fox@scene.pl>
* win32/wasap/wasap.c: when opening file from the Explorer, close only error
  messages, not file information


2009-09-22  Piotr Fusik  <fox@scene.pl>
* java/ASAPApplet.java: ignore leading hash in colors


2009-09-21  Piotr Fusik  <fox@scene.pl>
* java/ASAP.ppjava, java/ASAPApplet.java, java/USAGE: changed applet interface

* win32/wasap/wasap.c: close the open dialog or error message when opening
  file from the Explorer. Dragging a corrupted file to wasap.exe ten times