@@ -1,11 +1,14 @@
-PP = cpp -P -I..
+PP = cpp -P -I.. -DASAP_ONLY_SAP
 
-all: asap2wav.js
+all: asap2wav.js asapweb.js
 
 asap2wav.js: asap2wav.ppjs asap.ppjs ../asap.c ../acpu.c ../apokeysnd.c ../asap.h ../asap_internal.h ../anylang.h
-	$(PP) -DASAP_ONLY_SAP asap2wav.ppjs > $@
+	$(PP) $< > $@
+
+asapweb.js: asapweb.ppjs asap.ppjs ../asap.c ../acpu.c ../apokeysnd.c ../asap.h ../asap_internal.h ../anylang.h
+	$(PP) $< > $@
 
 clean:
-	rm -f asap2wav.js
+	rm -f asap2wav.js asapweb.js
 
 .DELETE_ON_ERROR:
