@@ -35,6 +35,8 @@ var ASAP_SampleFormat = {
 
 function ASAP_ParseDuration(s)
 {
+	if (s == null || s.length == 0)
+		return -1;
 	var i = s.indexOf(":");
 	var r = 0;
 	if (i >= 0) {
@@ -88,8 +90,8 @@ function ASAP()
 		ASAP_GetWavHeader(this, buffer, format);
 	}
 
-	this.generate = function(buffer, buffer_len, format)
+	this.generate = function(buffer, buffer_offset, buffer_len, format)
 	{
-		return ASAP_Generate(this, buffer, buffer_len, format);
+		return ASAP_Generate(this, buffer, buffer_offset, buffer_len, format);
 	}
 }
